--- a/frontend/src/app/components/templates/footer/footer.component.html
+++ b/frontend/src/app/components/templates/footer/footer.component.html
@@ -1,6 +1,7 @@
-<mat-toolbar class="footer mat-elevation-z6">
-    <span>Desenvolvido com
-        <i class="material-icons red v-middle">favorite</i>
-        por <strong>Cod <span class="red v-middle">3</span> r</strong>
-    </span>
+<mat-toolbar class="footer">
+    <span>Desenvolvido com 
+        <i class="material-icons v-middle" appRed>favorite</i>
+         por 
+         <strong>Cod<span class="v-middle"appRed>3
+         </span>r</strong></span>
 </mat-toolbar>
