--- a/frontend/src/app/components/templates/header/header.component.html
+++ b/frontend/src/app/components/templates/header/header.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar class="header mat-elevation-z3">
+<mat-toolbar class="header">
     <span>
         <a>
             <img class="logo" src="assets/img/logo.png" alt="logo">
