--- a/frontend/src/app/components/templates/nav/nav.component.html
+++ b/frontend/src/app/components/templates/nav/nav.component.html
@@ -2,12 +2,12 @@
     <mat-sidenav class="sidenav" mode="side" opened fixedInViewport="true" fixedTopGap="64">
         <mat-nav-list class="nav-list">
             
-            <a mat-list-item>
+            <a mat-list-item routerLink="/">
                 <i class="material-icons v-middle">
                     home
                 </i>Inicio</a>
 
-            <a mat-list-item>
+            <a mat-list-item routerLink="/products">
                 <i class="material-icons v-middle">
                     storefront
                 </i>Produtos
@@ -15,4 +15,9 @@
 
         </mat-nav-list>
     </mat-sidenav>
+    <mat-sidenav-content class="content">
+        <!-- <app-home></app-home> -->
+        <!-- <app-product-crud></app-product-crud> -->
+        <router-outlet></router-outlet>
+    </mat-sidenav-content>
 </mat-sidenav-container>
